--- a/src/styles/advice.css
+++ b/src/styles/advice.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto+Condensed&display=swap');
+
 button {
     width: 70px;
     height: 69px;
@@ -17,7 +19,9 @@ div .card {
     border-radius: 12px;
     padding: 80px;
     height: 30%;
-    background-color: orange;
+    background-color: #313A49;
+    font-family: 'Roboto Condensed', sans-serif;
+    text-align: center;
 }
 
 hr {
@@ -36,4 +40,12 @@ hr {
 svg.bi.bi-pause-fill.pause {
     padding: 0 10px;
     color: white;
+}
+
+h5 {
+    text-align: center;
+    color: #8DD9C7;
+    /* font-family: 'Montserrat', sans-serif; */
+    font-family: 'Roboto Condensed', sans-serif;
+    letter-spacing: 0.3em;
 }
